<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="@dimen/margin_200"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/margin_6"
    app:cardElevation="@dimen/margin_4"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10"
        android:gravity="center"
        android:layout="@dimen/margin_10"
        android:orientation="vertical">

        <com.geniuskid.haveitback.views.MaterialRippleLayout
            android:id="@+id/takePhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_6"
            android:padding="@dimen/margin_10"
            app:mrl_rippleColor="@color/material_ripple"
            app:mrl_rippleOverlay="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/take_photo"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_16" />

        </com.geniuskid.haveitback.views.MaterialRippleLayout>

        <com.geniuskid.haveitback.views.MaterialRippleLayout
            android:id="@+id/chooseGallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_6"
            android:padding="@dimen/margin_10"
            app:mrl_rippleColor="@color/material_ripple"
            app:mrl_rippleOverlay="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_gallery"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_16" />

        </com.geniuskid.haveitback.views.MaterialRippleLayout>

        <com.geniuskid.haveitback.views.MaterialRippleLayout
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_6"
            android:padding="@dimen/margin_10"
            app:mrl_rippleColor="@color/material_ripple"
            app:mrl_rippleOverlay="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_16" />

        </com.geniuskid.haveitback.views.MaterialRippleLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>