<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/app_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/margin_90"
            android:layout_height="@dimen/margin_90"
            android:contentDescription="@null"
            android:layout_marginBottom="@dimen/margin_18"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:text="@string/app_name"
            android:textSize="@dimen/txt_16"
            android:textStyle="bold"
            android:textColor="@color/text_color_dark"
            android:layout_marginBottom="@dimen/margin_18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginStart="@dimen/margin_30"
            android:layout_marginEnd="@dimen/margin_30"
            android:text="@string/login_hint"
            android:gravity="center"
            android:textColor="@color/text_color"
            android:layout_marginBottom="@dimen/margin_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginStart="@dimen/margin_30"
            android:layout_marginEnd="@dimen/margin_30"
            android:text="@string/login_to_continue"
            android:gravity="start"
            android:textColor="@color/text_color"
            android:layout_marginBottom="@dimen/margin_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/social_lay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_10"
            android:orientation="horizontal">

            <com.geniuskid.haveitback.views.MaterialRippleLayout
                android:id="@+id/fb_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:mrl_rippleColor="#754267B2"
                app:mrl_rippleOverlay="true"
                app:mrl_rippleRoundedCorners="@dimen/margin_20">

                <ImageView
                    android:layout_width="@dimen/margin_50"
                    android:layout_height="@dimen/margin_50"
                    android:background="@drawable/round_facebook"
                    android:padding="@dimen/margin_5"
                    android:src="@drawable/ic_facebook_logo" />
            </com.geniuskid.haveitback.views.MaterialRippleLayout>

            <com.geniuskid.haveitback.views.MaterialRippleLayout
                android:id="@+id/google_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20"
                app:mrl_rippleColor="#66FF5722"
                app:mrl_rippleOverlay="true"
                app:mrl_rippleRoundedCorners="@dimen/margin_20">

                <ImageView
                    android:layout_width="@dimen/margin_50"
                    android:layout_height="@dimen/margin_50"
                    android:background="@drawable/round_google"
                    android:padding="@dimen/margin_5"
                    android:src="@drawable/ic_google_g" />
            </com.geniuskid.haveitback.views.MaterialRippleLayout>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>